# qt5-qml-cmake-hello-world

./: CMakeLists.txt  Dockerfile.windows  Makefile  README.md
cmake/: Deploy.cmake
src/: CMakeLists.txt  assets.qrc  main.cpp  main.qml
